# stefanocatani

./: Cargo.toml  README.md
src/: main.rs
static/: Locura.xhtml  casabaldini.db  casabaldini.sqlite  menu_111.css  news-slider.xhtml  nivo.xhtml  riquadro.html
static/Ace-Menu/: AceMenu.html  vertical-menu.html
static/Ace-Menu/css/: ace-responsive-menu-old.css  ace-responsive-menu.css
static/Blue-Slider-master/: index.html
static/Blue-Slider-master/css/: blue-slider.min.css
static/CSS3/css/: demo.css  style1.css
static/GMenu/: index_1.html
static/GMenu/css/: demo.css
static/Locura_files/: script.js
static/blogs/css/: styles.css
static/css/: demo.css  main.css  menu2.css  menu_1.css  menu_114.css  menu_12.css  responsive.css  s3-slider.min.css  scrol.css  slider.css  style.css  unusual-menu.css  w3.css
static/img/: 2021tesserati.csv  contatti-per-inviti_2.csv
static/javascript/: jquery.js  menu3.js  menu_111.js  menu_114.js  menujs.js
static/js/: scrol.js  slider.js
static/manifestazioni/: Locura.xhtml
static/menu/: unusual menu.xhtml
static/menu-responsivo-demo2/: menu.html
static/menu_2/: index.html
static/menu_3/: index3.xhtml
static/menu_4/: index.html
static/menu_5/: index.html
static/nivo-slider/: demo.html
static/responsive/: responsive.css  responsive.html
static/rust/: style.css
static/scripts/: jquery.mobile.customized.min.js
static/slider copy/: fashion.html
static/split/: Stylus.css
static/square/: square.html
templates/: _AceMenu_.html  about.html  base.html  index.html  slider.html
(+20 files in other folders)
