[package]
name = "stefanocatani"
version = "0.1.0"
edition = "2024"
[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] } # Necessario per i file statici
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
askama_axum = "0.4"
tera = "1.19" # Il motore di template
rusqlite = { version = "0.31", features = ["bundled"] } # "bundled" compila SQLite internamente

